# PirateLand

./: javascript.js  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  Downloads.tsx  GameDetails.tsx  GameList.tsx  Library.tsx  LogViewer.tsx  Screenshots.tsx  SidePanel.tsx  main.tsx
src-tauri/: Cargo.toml  Necesse.torrent  Palworld.torrent  Satisfactory.torrent  tauri.conf.json
src-tauri/go-rain-server/: go.mod  go.sum  main.go
src-tauri/icons/: pico.icns
src-tauri/src/: auth_and_download.rs  config.rs  lib.rs  main.rs  proxy.rs  scrapers.rs  steamapi.rs  torrent_manager.rs
