[package]
name = "pirateland"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pirateland_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version = "0.12.9", features= ["blocking", "rustls-tls", "json"], default-features = false }
scraper = "0.21.0"
warp = "0.3.7"
tokio = { version = "1.41.1", features = ["full"] }
cookie = "0.18.1"
once_cell = "1.20.2"
rustls = "0.23.17"
strsim = "0.11.1"
anyhow = "1.0.93"
dirs = "5.0.1"
lazy_static = "1.5.0"
